[project]
name = "generalization-oracles"
version = "0.1.0"
description = "Predicting unintended model behaviors before training"
requires-python = "==3.11.*"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "peft",
    "trl",
    "huggingface-hub",
    "wandb",
    "scikit-learn",
    "seaborn",
    "matplotlib",
    "numpy",
    "pandas",
    "tqdm",
    "jupyter",
    "python-dotenv",
]
